services/netpolicy/templates/default-dns.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default.dns
specs:
  - endpointSelector:
      matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    ingress:
    - fromEntities:
      - all
      toPorts:
      - ports:
        - port: "53"
          protocol: ANY
      - ports:
        - port: "9153"
          protocol: ANY
  - endpointSelector:
      matchLabels:
        k8s:io.kubernetes.pod.namespace: default
    egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns 
      toPorts:
        - ports:
          - port: "53"
            protocol: ANY
        - ports:
          - port: "9153"
            protocol: ANY
