services/netpolicy/templates/default-egress.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-world"
  namespace: default
specs:
  - endpointSelector:
      matchLabels:
        k8s:io.kubernetes.pod.namespace: default
    egress:
    - toEntities:
        - world
