services/netpolicy/templates/defaut-vault.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "vault-postgres"
  namespace: default
specs:
  - endpointSelector:
      matchLabels:
        k8s:selector.cilium.rbkmoney/release: vault
    egress:
    - toEndpoints:
      - matchLabels:
          k8s:selector.cilium.rbkmoney/release: postgres
      toPorts:
      - ports:
        - protocol: TCP
          port: "5432"
    - toEntities:
        - host
      toPorts:
      - ports:
        - protocol: TCP
          port: "8443"
  - endpointSelector:
      matchLabels:
        k8s:selector.cilium.rbkmoney/release: postgres
    ingress:
    - fromEndpoints:
      - matchLabels:
          k8s:selector.cilium.rbkmoney/release: vault
      toPorts:
      - ports:
        - protocol: TCP
          port: "5432"
  - endpointSelector:
      matchLabels:
        k8s:app.kubernetes.io/name: vault-agent-injector
    egress:
    - toEntities:
      - host
      toPorts:
      - ports:
        - protocol: TCP
          port: "8443"
