services/netpolicy/templates/kafka-brokers.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-kafka-brokers"
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: kafka-broker
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: kafka-broker
    toPorts:
    - ports:
      - port: "9092"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/component: kafka-broker
    toPorts:
    - ports:
      - port: "9092"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
