services/netpolicy/templates/kafka-default-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-egress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kafka
  ingress:
  - {}
  egress:
  - {}
