services/netpolicy/templates/kafka-hooker-CiliumNetworkPolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "kafka-policy-hooker"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka
  ingress:
    - toPorts:
      - ports:
        - protocol: TCP
          port: "9092"
      fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: hooker
      rules:
        kafka:
          - role: consume
            topic: mg-events-customer
          - role: consume
            topic: mg-events-invoice
